--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "re-base": "2.3.0",
     "react": "15.3.2",
     "react-addons-css-transition-group": "15.4.1",
+    "react-datepicker": "^0.46.0",
     "react-dom": "15.3.2",
     "react-router": "4.0.0-alpha.3"
   },
